Till Service item Page- 1st round
[A
clearr

exit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>Nuuk Project</title>
 </head>
+
 <body>
-    
+    <div id="banner">
+        <div id="nav-bar">
+            <img id="logo" src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-white.png" alt="Nuuk-Logo">
+            <a href="#">Home</a>
+            <a href="#">Projects</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Blog</a>
+            <div id="dropdown">
+                <span>Pages</span>
+                <i class="fas fa-caret-down"></i></div>
+            <span id="popup-button-1">Get Free Quote</span>
+        </div>
+
+        <!-- Slogon Section -->
+        <div id="slogon-section">
+            <h1 id="top-title">YOU DREAM. WE CREATE.</h1>
+            <p id="top-paragraph">We turn your ideas to reality, we don't stop until you're satisfied.</p>
+            <span id="popup-button-2">Get Free Quote</span>
+        </div>
+
+        <!-- Social Media -->
+        <div id="social-media-wrapper">
+                <div class="logo"><i class="fab fa-facebook-f"></i></div>
+                <div class="logo"><i class="fab fa-twitter"></i></div>
+                <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+                <div class="logo"><i class="fab fa-instagram"></i></div>
+        </div>
+
+        <!-- Features Wrapper -->
+        <div id="features-wrapper">
+            <div id="phone-number">
+                <div><i class="fas fa-phone-alt"></i></div>
+                <div>Phone number</div>
+                <div>1-800-506-266</div>
+                <div>1-100-777-800</div>
+            </div>
+            <div id="email-details">
+                <div><i class="far fa-envelope"></i></div>
+                <div>contact</div>
+                <div>contact@nuuk.com</div>
+                <div>info@nuuk.com</div>
+            </div>
+            <div id="opening-times">
+                <div><i class="far fa-clock"></i></div>
+                <div>OPENING TIMES</div>
+                <div>Mon - Sat 8:00 - 17:30, Sunday - Closed</div>
+                <div>FIND ON MAP</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Section-2 Services -->
+
+    <section id="services">
+        <div id="service-title">
+            <p id="background-title">SERVICES</p>
+            <p id="top-title">OUR SPECIALIZATION</p>
+            <a href="#">VIEW ALL SERVICES</a>
+        </div>
+        <!-- Service Items -->
+        <div id="service-item">
+            <div class="item-wrapper">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/brickwall.svg" alt="brickwall">
+                <h2>RENOVATION</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <span class="service-item-button">LEARN MORE</span>
+            </div>
+            <div class="item-wrapper">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/set-square.svg" alt="set-square">
+                <h2>ARCHITECTURE</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <span class="service-item-button">LEARN MORE</span>
+            </div>
+            <div class="item-wrapper">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/toolbox.svg" alt="toolbox">
+                <h2>CONSTRUCTION</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <span class="service-item-button">LEARN MORE</span>
+            </div>
+            <div class="item-wrapper">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/paint-roller.svg" alt="paint-roller">
+                <h2>FINANCIAL RESULTS</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <span class="service-item-button">LEARN MORE</span>
+            </div>
+        </div>
+    </section>
+
+    <footer></footer>
 </body>
+
 </html>
