Completed till team Professional

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>Nuuk Project</title>
 </head>
@@ -33,10 +34,10 @@
 
         <!-- Social Media -->
         <div id="social-media-wrapper">
-                <div class="logo"><i class="fab fa-facebook-f"></i></div>
-                <div class="logo"><i class="fab fa-twitter"></i></div>
-                <div class="logo"><i class="fab fa-linkedin-in"></i></div>
-                <div class="logo"><i class="fab fa-instagram"></i></div>
+            <div class="logo"><i class="fab fa-facebook-f"></i></div>
+            <div class="logo"><i class="fab fa-twitter"></i></div>
+            <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+            <div class="logo"><i class="fab fa-instagram"></i></div>
         </div>
 
         <!-- Features Wrapper -->
@@ -66,39 +67,193 @@
 
     <section id="services">
         <div id="service-title">
-            <p id="background-title">SERVICES</p>
-            <p id="top-title">OUR SPECIALIZATION</p>
-            <a href="#">VIEW ALL SERVICES</a>
+            <p class="section-background-title">SERVICES</p>
+            <p class="section-top-title">OUR SPECIALIZATION</p>
+            <a href="#" class="section-button">VIEW ALL SERVICES</a>
         </div>
         <!-- Service Items -->
         <div id="service-item">
             <div class="item-wrapper">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/brickwall.svg" alt="brickwall">
                 <h2>RENOVATION</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-                <span class="service-item-button">LEARN MORE</span>
+                <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+                    enim in eros elementum tristique.</p>
+                <span class="section-button">LEARN MORE</span>
             </div>
             <div class="item-wrapper">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/set-square.svg" alt="set-square">
                 <h2>ARCHITECTURE</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-                <span class="service-item-button">LEARN MORE</span>
+                <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+                    enim in eros elementum tristique.</p>
+                <span class="section-button">LEARN MORE</span>
             </div>
             <div class="item-wrapper">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/toolbox.svg" alt="toolbox">
                 <h2>CONSTRUCTION</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-                <span class="service-item-button">LEARN MORE</span>
+                <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+                    enim in eros elementum tristique.</p>
+                <span class="section-button">LEARN MORE</span>
             </div>
             <div class="item-wrapper">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/paint-roller.svg" alt="paint-roller">
                 <h2>FINANCIAL RESULTS</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-                <span class="service-item-button">LEARN MORE</span>
+                <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+                    enim in eros elementum tristique.</p>
+                <span class="section-button">LEARN MORE</span>
+            </div>
+        </div>
+
+        <!-- About -->
+
+        <div id="about">
+            <div id="image-wrapper">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/serv-1.jpg" alt="serv-1">
+            </div>
+            <div id="about-content">
+                <div class="section-top-title">WHO WE ARE
+                </div>
+                <div class="section-background-title">ABOUT</div>
+                <p class="paragraph-content">Based on collective work and shared knowledge, Nuuk aims to favor dialogue
+                    and debate, to transform individual knowledge into increased creative potential. <br> <br>
+                    Our studio is a architecture practice based in NY and Paris. Today, it includes 150 architects,
+                    urban
+                    planners, landscape and interior designers of 25 different nationalities. The company principle of
+                    Architecture-Studio is the collective conception. From the very beginning, the practice has believed
+                    in
+                    the virtues of exchange, crossing ideas, common effort, shred knowledge.
+
+                </p>
+                <a href="#" class="section-button">MEET THE TEAM</a>
+            </div>
+        </div>
+
+
+        <!-- Fun Fact -->
+        <div id="fun-fact">
+            <div class="fun-fact-wrapper">
+                <span class="fun-title">170</span>
+                <p class="fun-text">Employer with over 10 years of experience</p>
+            </div>
+            <div class="fun-fact-wrapper">
+                <span class="fun-title">10</span>
+                <p class="fun-text">Years experience in construction industries</p>
+            </div>
+            <div class="fun-fact-wrapper">
+                <span class="fun-title">690</span>
+                <p class="fun-text">Residential premises completed in 2019</p>
+            </div>
+            <div class="fun-fact-wrapper">
+                <span class="fun-title">7.1</span>
+                <p class="fun-text">Milion dollar value on investments</p>
             </div>
         </div>
     </section>
 
+
+    <!-- Section-3 Projects -->
+
+    <section id="projects">
+        <div id="projects-title">
+            <div class="section-top-title">OUR WORK</div>
+            <div class="section-background-title">PROJECTS</div>
+            <a href="#" class="section-button">VIEW ALL SERVICES</a>
+        </div>
+        <div id="project-items-section">
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-1.jpg" alt="">
+            </div>
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-4.jpg" alt="">
+            </div>
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-3.jpg" alt="">
+            </div>
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-6.jpg" alt="">
+            </div>
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-5.jpg" alt="">
+            </div>
+            <div class="project-list">
+                <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-2.jpg" alt="">
+            </div>
+        </div>
+
+        <!-- Orange Section -->
+        <div id="orange-section">
+            <div class="section-top-title">LET'S MAKE SOMETHING GREAT TOGETHER</div>
+            <div class="paragraph-content">Get in touch with us and send some basic info for a quick quote.</div>
+            <a href="#" class="section-button">GET FREE QUOTE</a>
+        </div>
+
+
+        <!-- Team -->
+        <div id="team">
+            <div id="team-title">
+                <div class="section-top-title">PROFESSIONALS
+                </div>
+                <div class="section-background-title">TEAM</div>
+                <a href="#" class="section-button">ABOUT US</a>
+            </div>
+            <div id="team-wrapper">
+
+                <div class="profile-wrapper">
+                    <div class="profile-image-wrapper image-1"></div>
+                    <div class="profile-details">
+                        <h1>PHILIP BROWER</h1>
+                        <p>Managing Director</p>
+                    </div>
+                    <div class="social-media-link">
+                        <div class="logo"><i class="fab fa-facebook-f"></i></div>
+                        <div class="logo"><i class="fab fa-twitter"></i></div>
+                        <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+                    </div>
+                </div>
+
+                <div class="profile-wrapper">
+                    <div class="profile-image-wrapper image-2"></div>
+                    <div class="profile-details">
+                        <h1>JOHN WICK</h1>
+                        <p>Managing Director</p>
+                    </div>
+                    <div class="social-media-link">
+                        <div class="logo"><i class="fab fa-facebook-f"></i></div>
+                        <div class="logo"><i class="fab fa-twitter"></i></div>
+                        <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+                    </div>
+                </div>
+                <div class="profile-wrapper">
+                    <div class="profile-image-wrapper image-3"></div>
+                    <div class="profile-details">
+                        <h1>JIMMY MCGILL</h1>
+                        <p>Managing Director</p>
+                    </div>
+                    <div class="social-media-link">
+                        <div class="logo"><i class="fab fa-facebook-f"></i></div>
+                        <div class="logo"><i class="fab fa-twitter"></i></div>
+                        <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+                    </div>
+                </div>
+                <div class="profile-wrapper">
+                    <div class="profile-image-wrapper image-4"></div>
+                    <div class="profile-details">
+                        <h1>SARA CONNOR</h1>
+                        <p>Managing Director</p>
+                    </div>
+                    <div class="social-media-link">
+                        <div class="logo"><i class="fab fa-facebook-f"></i></div>
+                        <div class="logo"><i class="fab fa-twitter"></i></div>
+                        <div class="logo"><i class="fab fa-linkedin-in"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Testimonials -->
+        <div id="testimonials">
+            <h1>Testimonials</h1>
+        </div>
+    </section>
     <footer></footer>
 </body>
 
