Almost done (R-overlay,dropdown)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <div id="dropdown">
                 <span id="dropdown-nav">Pages</span>
                 <i class="fas fa-caret-down"></i></div>
+            <div id="dropdown-list">
+                <a href="#">404 error Page</a>
+                <a href="#">Protected Page</a>
+                <a href="#">Style Guide</a>
+                <a href="#">Licensing</a>
+            </div>
             <span id="popup-button-1">Get Free Quote</span>
         </div>
 
@@ -58,7 +64,7 @@
                 <div><i class="far fa-clock"></i></div>
                 <div>OPENING TIMES</div>
                 <div>Mon - Sat 8:00 - 17:30, Sunday - Closed</div>
-                <div>FIND ON MAP</div>
+                <span class="section-button">FIND ON MAP</span>
             </div>
         </div>
     </div>
@@ -196,7 +202,6 @@
                 <a href="#" class="section-button">ABOUT US</a>
             </div>
             <div id="team-wrapper">
-
                 <div class="profile-wrapper">
                     <div class="profile-image-wrapper image-1"></div>
                     <div class="profile-details">
@@ -252,26 +257,28 @@
         <!-- Testimonials -->
         <div id="testimonials">
             <div id="testimonials-content">
-                <div class="section-top-title">TESTIMONIALS</div>
                 <div class="section-background-title">CLIENTS</div>
+                <div class="section-top-title">TESTIMONIALS</div>
                 <p class="paragraph-content">Aenean ut eros et nisl sagittis vestibulum. Fusce neque. Praesent blandit
                     laoreet nibh. Morbi mollis tellus ac sapien.</p>
                 <a href="" class="section-button">OUR SERVICES</a>
             </div>
             <div class="client-card-wrapper">
                 <div class="client-profile-wrapper">
-                    <h1>SARA WILLIAM</h1>
-                    <h2>CEO at Webflow</h2>
-                    <p> "Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                    <h1 class="client-name">SARA WILLIAM</h1>
+                    <h2 class="client-job-title">CEO at Webflow</h2>
+                    <p class="paragraph-content"> "Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                        commodo diam libero vitae
                         erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet" </p>
                     <div class="orange-circle">
                         <i class="fas fa-grip-lines-vertical"></i>
                     </div>
                 </div>
                 <div class="client-profile-wrapper">
-                    <h1>JOHN JUNIOR</h1>
-                    <h2>Menager at Complexx</h2>
-                    <p> "Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Cras varius. Etiam sit amet
+                    <h1 class="client-name">JOHN JUNIOR</h1>
+                    <h2 class="client-job-title">Manager at Complexx</h2>
+                    <p class="paragraph-content"> "Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Cras
+                        varius. Etiam sit amet
                         orci eget eros faucibus tincidunt. Fusce a quam" </p>
                     <div class="orange-circle">
                         <i class="fas fa-grip-lines-vertical"></i>
@@ -281,19 +288,21 @@
             </div>
             <div class="client-card-wrapper client-wrapper-2">
                 <div class="client-profile-wrapper">
-                    <h1>RAVEN DURGAN</h1>
-                    <h2>Architect at Group</h2>
-                    <p> ""Aliquam eu nunc. Cras dapibus. Vestibulum turpis sem, aliquet eget, lobortis pellentesque,
+                    <h1 class="client-name">RAVEN DURGAN</h1>
+                    <h2 class="client-job-title">Architect at Group</h2>
+                    <p class="paragraph-content"> ""Aliquam eu nunc. Cras dapibus. Vestibulum turpis sem, aliquet eget,
+                        lobortis pellentesque,
                         rutrum eu, nisl"" </p>
-                        
-                        <div class="orange-circle">
-                            <i class="fas fa-grip-lines-vertical"></i>
-                        </div>
+
+                    <div class="orange-circle">
+                        <i class="fas fa-grip-lines-vertical"></i>
+                    </div>
                 </div>
                 <div class="client-profile-wrapper">
-                    <h1>SAMI TYPO</h1>
-                    <h2>SEO at Balfin</h2>
-                    <p> "Vestibulum fringilla pede sit amet augue. Morbi ac felis. Ut a nisl id ante tempus hendrerit"
+                    <h1 class="client-name">SAMI TYPO</h1>
+                    <h2 class="client-job-title">SEO at Balfin</h2>
+                    <p class="paragraph-content"> "Vestibulum fringilla pede sit amet augue. Morbi ac felis. Ut a nisl
+                        id ante tempus hendrerit"
                     </p>
                     <div class="orange-circle">
                         <i class="fas fa-grip-lines-vertical"></i>
@@ -324,7 +333,11 @@
                     <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
                         varius
                         enim in eros elementum tristique.</p>
-                    <span class="section-button">LEARN MORE</span>
+                    <span class="section-button">READ MORE</span>
+                </div>
+                <div class="blog-date">
+                    <p class="meta-number">17</p>
+                    <p class="meta-month">OCT</p>
                 </div>
             </div>
             <div class="blog-wrapper">
@@ -336,7 +349,11 @@
                     <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
                         varius
                         enim in eros elementum tristique.</p>
-                    <span class="section-button">LEARN MORE</span>
+                    <span class="section-button">READ MORE</span>
+                </div>
+                <div class="blog-date">
+                    <p class="meta-number">11</p>
+                    <p class="meta-month">DEC</p>
                 </div>
             </div>
             <div class="blog-wrapper">
@@ -348,7 +365,11 @@
                     <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
                         varius
                         enim in eros elementum tristique.</p>
-                    <span class="section-button">LEARN MORE</span>
+                    <span class="section-button">READ MORE</span>
+                </div>
+                <div class="blog-date">
+                    <span class="meta-number">27</span>
+                    <span class="meta-month">OCT</span>
                 </div>
             </div>
         </div>
@@ -366,23 +387,34 @@
     <footer>
         <div id="footer-content">
             <div class="info-wrapper">
-                <h1>ABOUT NUUK</h1>
+                <div class="info-title">
+                    <h1>ABOUT NUUK</h1>
+                    <span class="horizontal-line"></span>
+                </div>
                 <p>
                     Based on collective work and shared knowledge, Nuuk aims to favor dialogue and debate, to transform
                     individual knowledge into increased creative potential.
                 </p>
-                <a href="#" class="section-button">FIND ON MAP</a>
+                <span href="#" class="section-button">FIND ON MAP</span>
             </div>
             <div class="info-wrapper">
-                <h1>SERVICES</h1>
-                <a href="#" class="section-button">FINANCIAL RESULTS</a>
-                <a href="#" class="section-button">CONSTRUCTION</a>
-                <a href="#" class="section-button">ARCHITECTURE</a>
-                <a href="#" class="section-button">RENOVATION</a>
+                <div class="info-title">
+                    <h1>SERVICES</h1>
+                    <span class="horizontal-line"></span>
+                </div>
+                <div class="services-link">
+                <span href="#" class="section-button">FINANCIAL RESULTS</span>
+                <span href="#" class="section-button">CONSTRUCTION</span>
+                <span href="#" class="section-button">ARCHITECTURE</span>
+                <span href="#" class="section-button">RENOVATION</span>
+                </div>
+            </div>
 
-            </div>
             <div class="info-wrapper">
-                <h1>CONTACT US</h1>
+                <div class="info-title">
+                    <h1>CONTACT US</h1>
+                    <span class="horizontal-line"></span>
+                </div>
                 <div id="phone-number">
                     <div><i class="fas fa-phone-alt"></i></div>
                     <div>
@@ -407,7 +439,7 @@
 
             </div>
         </div>
-        <div>
+        <div id="footer-logo">
             <img class="nuuk-logo" src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-white.png" alt="Nuuk-Logo">
         </div>
     </footer>
