Responsive 60 percent done

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div id="nav-bar">
             <img class="nuuk-logo" src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-white.png" alt="Nuuk-Logo">
             <a href="#" id="active">Home</a>
-            <a href="#">Projects</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Blog</a>
+            <a href="#projects">Projects</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#blog">Blog</a>
             <div id="dropdown">
                 <span id="dropdown-nav">Pages</span>
                 <i class="fas fa-caret-down"></i></div>
@@ -167,21 +167,39 @@
         <div id="project-items-section">
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-1.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-4.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-3.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-6.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-5.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-2.jpg" alt="">
+                <div class="hover-text">
+                    <div class="text-content">VIEW PROJECT</div>
+                </div>
             </div>
         </div>
 
@@ -403,10 +421,10 @@
                     <span class="horizontal-line"></span>
                 </div>
                 <div class="services-link">
-                <span href="#" class="section-button">FINANCIAL RESULTS</span>
-                <span href="#" class="section-button">CONSTRUCTION</span>
-                <span href="#" class="section-button">ARCHITECTURE</span>
-                <span href="#" class="section-button">RENOVATION</span>
+                    <span href="#" class="section-button">FINANCIAL RESULTS</span>
+                    <span href="#" class="section-button">CONSTRUCTION</span>
+                    <span href="#" class="section-button">ARCHITECTURE</span>
+                    <span href="#" class="section-button">RENOVATION</span>
                 </div>
             </div>
 
