Remain overlay--All done, Responsive done

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <a href="#services">Services</a>
             <a href="#blog">Blog</a>
             <div id="dropdown">
-                <span id="dropdown-nav">Pages</span>
-                <i class="fas fa-caret-down"></i></div>
-            <div id="dropdown-list">
-                <a href="#">404 error Page</a>
-                <a href="#">Protected Page</a>
-                <a href="#">Style Guide</a>
-                <a href="#">Licensing</a>
+                <span class="dropdown-nav">Pages</span>
+                <i class="fas fa-caret-down"></i>
+                <!-- Testing -->
+                <div id="dropdown-list">
+                    <a href="#">404 error Page</a>
+                    <a href="#">Protected Page</a>
+                    <a href="#">Style Guide</a>
+                    <a href="#">Licensing</a>
+                </div>
             </div>
             <span id="popup-button-1">Get Free Quote</span>
         </div>
@@ -428,28 +430,28 @@
                 </div>
             </div>
 
-            <div class="info-wrapper">
+            <div class="info-wrapper wrapper-3">
                 <div class="info-title">
                     <h1>CONTACT US</h1>
                     <span class="horizontal-line"></span>
                 </div>
                 <div id="phone-number">
                     <div><i class="fas fa-phone-alt"></i></div>
-                    <div>
+                    <div class="details-info">
                         <p>PHONE NUMBER</p>
                         <p>1-800-506-266</p>
                     </div>
                 </div>
                 <div id="opening-times">
                     <div><i class="far fa-clock"></i></div>
-                    <div>
+                    <div class="details-info">
                         <p>OPENING TIMES</p>
                         <p>Mon - Sat 8:00 - 17:30, Sunday - Closed</p>
                     </div>
                 </div>
                 <div id="email-details">
                     <div><i class="far fa-envelope"></i></div>
-                    <div>
+                    <div class="details-info">
                         <p>CONTACT</p>
                         <p>contact@nuuk.com</p>
                     </div>
